image alignment issue fix

--- a/main.css
+++ b/main.css
@@ -192,7 +192,7 @@ section.cover p {
 .tech-logo-img {
   max-width: 100px;
   width: 90px;
-  height: 90px;
+  height: 68%;
   margin-bottom: 0.4rem;
   padding: 0 1rem;
   display: flex;
